# Python-MCP-Weather-Server

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_weather_server.py
tools/: __init__.py  weather.py
weather-mcp/: connect-to-github.ps1  push-to-github.bat
